--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,5 @@
     "http://*/*",
     "https://*/*"
   ],
-  "content_security_policy": "script-src 'self' https://*.firebase.com https://*.firebaseio.com; object-src 'self'"
+  "content_security_policy": "script-src 'self' https://*.firebase.com https://*.firebaseio-demo.com https://*.firebaseio.com; object-src 'self'"
 }
